<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:layout_marginTop="@dimen/big_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/big_padding"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_income"
            android:inputType="textAutoComplete"
            android:padding="@dimen/small_padding"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/edit_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:entries="@array/category_arrays"
            android:prompt="@string/category_text"
            />


        <DatePicker
            android:id="@+id/simpleDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"/>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</ScrollView>